--- a/Simulator/MPI_Simulator.ipynb
+++ b/Simulator/MPI_Simulator.ipynb
@@ -403,7 +403,7 @@
    "outputs": [],
    "source": [
     "Alg_Name = 'SUMMA'\n",
-    "Routine = get_BAMMA('BAMMA/P16_SUMMA.csv')"
+    "Routine = get_BAMMA('BAMMA/P16_SUMMA.csv',random_map)"
    ]
   },
   {
